- Added Test classes - Added JUnit5 to pom - Configured JUnit5 tests to work with Surfire plugin - Added Groovy Support